--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -99,7 +99,8 @@ stages:
         WebAppNameDev=$(terraform output appservice_name_dev)
 
         #Write the webappnamedev variable to the pipeline.
-        echo "##vso[task.setvariable variable=WebAppName;isOutput=true]$WebAppNameDev"
+        echo "##vso[task.setvariable variable=WebAppNameDev;isOutput=true]$WebAppNameDev"
+        
       name: 'RunTerraForm'
       displayName: 'Run Terraform'
       env:
